Fix navbar dropdown on mobile, flex up bid select.

--- a/assets/css/components/_admin-bar.scss
+++ b/assets/css/components/_admin-bar.scss
@@ -24,7 +24,7 @@
 .navbar-dropdown__admin { // Styles related to Admin/Agent Toggle
   align-self: center;
 
-  @media (max-width: 768px) {
+  @media (max-width: 1024px) {
     background-color: #efefef;
     padding-left: 1rem;
     padding-bottom: 1rem;
