--- a/assets/css/components/_auction-solution.scss
+++ b/assets/css/components/_auction-solution.scss
@@ -36,6 +36,7 @@
     }
   }
   .auction-solution__content {
+    display: flex;
     margin-left: auto;
   }
   .auction-solution__confirmation {
